kded/devicemonitor: Check BlueDevilDaemon exists when calling login1PrepareForSleep

It's possible that BlueDevilDaemon has been destroyed, but PrepareForSleep
is received before DeviceMonitor is destroyed, so a crash will happen. To prevent
the crash, add a check in login1PrepareForSleep to validate BlueDevilDaemon still exists.

BUG: 450195
FIXED-IN: 5.24.1