src/kded/devicemonitor.h
@@ -45,6 +45,7 @@ private:
     KFilePlacesModel *places();
 
     BluezQt::Manager *m_manager;
+    bool m_isParentValid;
     KFilePlacesModel *m_places = nullptr;
     KSharedConfig::Ptr m_config;
 };
